fixed profile directory spacing

--- a/source/sass/wagtail/profiles.scss
+++ b/source/sass/wagtail/profiles.scss
@@ -44,8 +44,10 @@
   grid-template-columns: 1fr 2fr;
 
   @media screen and (min-width: $bp-sm) {
-    grid-template-rows: repeat(3, 0.25fr);
+    grid-template-rows: 0.5fr 0.75fr 0.1fr;
     grid-template-columns: 0.9fr 2fr;
+    max-height: 300px;
+    overflow: hidden;
   }
 }
 
@@ -91,5 +93,9 @@
   @media screen and (min-width: $bp-sm) {
     grid-column-start: 2;
     grid-column-end: 3;
+  }
+
+  @media screen and (min-width: $bp-lg) {
+    height: 115px;
   }
 }
